test(protobuf): cover unsafe identifiers and FQN conflicts
Agent-Logs-Url: https://github.com/ai-pipestream/apicurio-registry/sessions/f46b09a5-9460-44e4-b0ca-5cce5c2f0e20

Co-authored-by: krickert <313612+krickert@users.noreply.github.com>